--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Lover 2.0 Harry Potter</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header><img src="./img/logo.png" alt="logo" class="logo"></header>      
+    <nav>
+      
+
+    </nav>
     <main id="root">
-      <h1>Bienvenida</h1>
+      <h1>Personajes de la Saga de Harry Potter</h1>
+      <div id="conteiner"></div>
+      
     </main>
     <script src="data.js"></script>
     <script src="main.js"></script>
