intentando hacer funciones de ordenado y filtrado

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,48 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><img src="./img/logo.png" alt="logo" class="logo"></header>      
-    <nav>
-      
-
-    </nav>
+    <header><img src="./img/logo.png" alt="logo" class="logo"></header> 
     <main id="root">
-      <h1>Personajes de la Saga de Harry Potter</h1>
-      <div id="conteiner"></div>
+      <section id="menu">    
+        <nav class="menu">
+          <div>
+            <label>Ordenar por edad</label><br>
+            <button>↥</button><label>Ascendente</label><br>
+            <button>↧</button><label>Descendente</label>
+          </div>
+          <div>
+            <label>Filtrar por</label><br>
+            <label>Género</label>
+            <select name="genero">
+              <option value="femenino">Femenino</option>
+              <option value="masculino">Masculino</option>
+            </select>
+          </div>
+          <div>   
+            <label>Rol</label> 
+            <select name="rol">
+              <option value="estudiante">Estudiante</option>
+              <option value="staff">Staff</option>
+            </select>
+          </div>
+          <div>   
+            <label>Casa</label> 
+            <select name="Casa">
+              <option value="gryffindor">Gryffindor</option>
+              <option value="slytherin">Slytherin</option>
+              <option value="hufflepuff">Hufflepuff</option>
+              <option value="Ravenclaw">Ravenclaw</option>
+            </select> 
+          </div>  
+        </nav> 
+      </section>  
+      <section > 
+        <h1>Personajes de la Saga de Harry Potter</h1>
+        <div id="conteiner"></div>
+      </section>   
       
     </main>
-    <script src="data.js"></script>
     <script src="main.js"></script>
+    <script src="data.js"></script>
   </body>
 </html>
