pintando los resultado de funcion ordenar

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
         <nav class="menu">
           <div>
             <label>Ordenar por edad</label><br>
-            <button>↥</button><label>Ascendente</label><br>
-            <button>↧</button><label>Descendente</label>
+            <button id="asc">↥</button><label>Ascendente</label><br>
+            <button id="desc">↧</button><label>Descendente</label>
           </div>
           <div>
             <label>Filtrar por</label><br>
