pasando test eslint

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <label>Filtrar por</label><br>
             <label>Género</label>
             <select id="genero">
-              <option value="blanco"></option>
+              <option value="blanco">genero</option>
               <option value="femenino">Femenino</option>
               <option value="masculino">Masculino</option>
             </select>
@@ -28,7 +28,7 @@
           <div>   
             <label>Rol</label> 
             <select id="rol">
-              <option value="blanco"></option>
+              <option value="blanco">rol</option>
               <option value="Estudiante">Estudiante</option>
               <option value="Staff">Staff</option>
             </select>
@@ -36,7 +36,7 @@
           <div>   
             <label>Casa</label> 
             <select id="casa">
-              <option value="blanco"></option>
+              <option value="blanco">casa</option>
               <option value="Gryffindor">Gryffindor</option>
               <option value="Slytherin">Slytherin</option>
               <option value="Hufflepuff">Hufflepuff</option>
