--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
             <label>Género</label>
             <select id="genero">
               <option value="blanco">genero</option>
-              <option value="femenino">Femenino</option>
-              <option value="masculino">Masculino</option>
+              <option value="female">Femenino</option>
+              <option value="male">Masculino</option>
             </select>
           </div>
           <div>   
