avance de la maquetacion en css

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><img src="./img/logo.png" alt="logo" class="logo"></header> 
-    <main id="root">
-      <section id="menu">    
+    <main id="root" class="container_gen">
+      <section id="menu">
+        <header><img src="./img/logo.png" alt="logo" class="logo"></header>     
         <nav class="menu">
           <div>
             <label>Ordenar por edad</label><br>
@@ -47,7 +47,7 @@
       </section>  
       <section > 
         <h1>Personajes de la Saga de Harry Potter</h1>
-        <div id="container"></div>
+        <div id="container" class="container"></div>
       </section>   
       
     </main>
