empezando a dar algunos estilos en css

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
   <body>
     <main id="root" class="container_gen">
       <section id="menu">
-        <header><img src="./img/logo.png" alt="logo" class="logo"></header>     
+        <header><img src="./img/Logo-harry-potter.gif" alt="logo" class="logo"></header>     
         <nav class="menu">
           <div>
             <label>Ordenar por edad</label><br>
-            <button id="asc">↥</button><label>Ascendente</label><br>
-            <button id="desc">↧</button><label>Descendente</label>
+            <button id="asc"> ↥ </button><label>Ascendente</label><br>
+            <button id="desc"> ↧ </button><label>Descendente</label>
           </div>
           <div>
             <label>Filtrar por</label><br>
