--- a/src/index.html
+++ b/src/index.html
@@ -8,46 +8,53 @@
   </head>
   <body>
     <main id="root" class="container_gen">
-      <section id="menu">
-        <header><img src="./img/Logo-harry-potter.gif" alt="logo" class="logo"></header>     
-        <nav class="menu">
+      <section id="menu" class="cont-menu">
+        <header><img src="./img/Logo-harry-potter.gif" alt="Logo-harry-potter" class="logo"></header>     
+       
           <div>
-            <label>Ordenar por edad</label><br>
-            <button id="asc"> ↥ </button><label>Ascendente</label><br>
-            <button id="desc"> ↧ </button><label>Descendente</label>
+          <span>Ordenar por edad</span>
+          <div>
+            <div>  
+              <button id="asc" class="botton"> ↥ </button><label>Ascendente</label>
+            </div>
+            <div>  
+              <button id="desc" class="botton"> ↧ </button><label>Descendente</label>
+            </div>
           </div>
           <div>
-            <label>Filtrar por</label><br>
-            <label>Género</label>
-            <select id="genero">
-              <option value="blanco">genero</option>
-              <option value="female">Femenino</option>
-              <option value="male">Masculino</option>
-            </select>
+            <span>Filtrar por</span>
+            <div>
+              <label for="genero">Género</label>
+              <select id="genero">
+                <option value="blanco">genero</option>
+                <option value="female">Femenino</option>
+                <option value="male">Masculino</option>
+              </select>
+            </div>
+            <div>   
+            <label for="rol">Rol</label> 
+              <select id="rol">
+                <option value="blanco">rol</option>
+                <option value="Estudiante">Estudiante</option>
+                <option value="Staff">Staff</option>
+              </select>
+            </div>
+            <div>   
+              <label for="casa">Casa</label> 
+              <select id="casa">
+                <option value="blanco">casa</option>
+                <option value="Gryffindor">Gryffindor</option>
+                <option value="Slytherin">Slytherin</option>
+                <option value="Hufflepuff">Hufflepuff</option>
+                <option value="Ravenclaw">Ravenclaw</option>
+              </select> 
+            </div> 
           </div>
-          <div>   
-            <label>Rol</label> 
-            <select id="rol">
-              <option value="blanco">rol</option>
-              <option value="Estudiante">Estudiante</option>
-              <option value="Staff">Staff</option>
-            </select>
-          </div>
-          <div>   
-            <label>Casa</label> 
-            <select id="casa">
-              <option value="blanco">casa</option>
-              <option value="Gryffindor">Gryffindor</option>
-              <option value="Slytherin">Slytherin</option>
-              <option value="Hufflepuff">Hufflepuff</option>
-              <option value="Ravenclaw">Ravenclaw</option>
-            </select> 
-          </div>  
-        </nav> 
-      </section>  
+      </section>
+
       <section > 
         <h1>Personajes de la Saga de Harry Potter</h1>
-        <div id="container" class="container"></div>
+        <div id="container" class="container-card"></div>
       </section>   
       
     </main>
