--- a/src/index.html
+++ b/src/index.html
@@ -8,46 +8,42 @@
   </head>
   <body>
     <main id="root" class="container_gen">
-      <section id="menu">
-        <header><img src="./img/Logo-harry-potter.gif" alt="logo" class="logo"></header>     
-        <nav class="menu">
-          <div>
-            <label>Ordenar por edad</label><br>
-            <button id="asc"> ↥ </button><label>Ascendente</label><br>
-            <button id="desc"> ↧ </button><label>Descendente</label>
-          </div>
-          <div>
-            <label>Filtrar por</label><br>
-            <label>Género</label>
-            <select id="genero">
-              <option value="blanco">genero</option>
-              <option value="female">Femenino</option>
-              <option value="male">Masculino</option>
-            </select>
-          </div>
-          <div>   
-            <label>Rol</label> 
-            <select id="rol">
-              <option value="blanco">rol</option>
-              <option value="Estudiante">Estudiante</option>
-              <option value="Staff">Staff</option>
-            </select>
-          </div>
-          <div>   
-            <label>Casa</label> 
-            <select id="casa">
-              <option value="blanco">casa</option>
-              <option value="Gryffindor">Gryffindor</option>
-              <option value="Slytherin">Slytherin</option>
-              <option value="Hufflepuff">Hufflepuff</option>
-              <option value="Ravenclaw">Ravenclaw</option>
-            </select> 
-          </div>  
-        </nav> 
+      <section class= "menu col-xs-12 col-lg-3">
+        <div class="col-xs-4 col-lg-3">
+          <img src="./img/Logo-harry-potter.gif" alt="logo" class="logo">
+        </div>     
+        <div class = "ordenar col-xs-4 col-lg-12">
+          <p>Ordenar por edad<p>
+          <button id="asc"> ↥ </button><label>Ascendente</label><br>
+          <button id="desc"> ↧ </button><label>Descendente</label>
+        </div>
+        <div class = "filtrar col-xs-4 col-lg-12">
+          <label>Filtrar por</label><br>
+          <label>Género</label>
+          <select id="genero">
+            <option value="blanco">genero</option>
+            <option value="female">Femenino</option>
+            <option value="male">Masculino</option>
+          </select>       
+          <label>Rol</label> 
+          <select id="rol">
+            <option value="blanco">rol</option>
+            <option value="Estudiante">Estudiante</option>
+            <option value="Staff">Staff</option>
+          </select>
+          <label>Casa</label> 
+          <select id="casa">
+            <option value="blanco">casa</option>
+            <option value="Gryffindor">Gryffindor</option>
+            <option value="Slytherin">Slytherin</option>
+            <option value="Hufflepuff">Hufflepuff</option>
+            <option value="Ravenclaw">Ravenclaw</option>
+          </select> 
+        </div>  
       </section>  
-      <section > 
+      <section class="col-xs-12 col-lg-9" > 
         <h1>Personajes de la Saga de Harry Potter</h1>
-        <div id="container" class="container"></div>
+        <div id="container" class="container col-xs-12 col-lg-9"></div>
       </section>   
       
     </main>
