--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,19 @@
   </head>
   <body>
     <main id="root">
-      <section class="menu col-2 col-mobile-12">
+      <section class="menu col-2 col-mobile-12 ">
         <div class="col-mobile-4 col-12">
           <img src="./img/Logo-harry-potter.gif" alt="logo" class="logo">
         </div>     
-        <div class="col-mobile-4 col-12 ordenar">
+        <div class="col-mobile-4 col-12 ">
           <p>Ordenar por edad<p>
-          <button id="asc"> ↥ </button><label>Ascendente</label><br>
-          <button id="desc"> ↧ </button><label>Descendente</label>
+          <button id="asc" class="boton"> ↥ </button><label>Ascendente</label><br>
+          <button id="desc" class="boton"> ↧ </button><label>Descendente</label>
         </div>
-        <div class="col-mobile-4 col-12 filtrar">
-          <p class="filtrar-por">Filtrar por</p>
+        <div class="col-mobile-4 col-12 ">
+          <p>Filtrar por</p>
           <p>Género</p>
-          <select id="genero" class="filtrar">
+          <select id="genero">
             <option value="blanco">genero</option>
             <option value="female">Femenino</option>
             <option value="male">Masculino</option>
