--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
   <head>
     <meta charset="utf-8">
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
@@ -41,9 +41,9 @@
           </select> 
         </div>  
       </section>  
-      <section class="col-10 col-mobile-12" > 
+      <section class="fondo col-10 col-mobile-12" > 
         <h1>Personajes de la Saga de Harry Potter</h1>
-        <div id="container" class="container-menu"></div>
+        <div id="container"></div>
       </section>   
       
     </main>
